syntax = "proto3";

package interpret_report;

option go_package = "github.com/yshujie/questionnaire-scale/internal/apiserver/interface/grpc/proto/interpret-report";

// InterpretReportService 解读报告服务
service InterpretReportService {
    // SaveInterpretReport 保存解读报告
    rpc SaveInterpretReport(SaveInterpretReportRequest) returns (SaveInterpretReportResponse);
    
    // GetInterpretReportByAnswerSheetID 根据答卷ID获取解读报告
    rpc GetInterpretReportByAnswerSheetID(GetInterpretReportByAnswerSheetIDRequest) returns (GetInterpretReportByAnswerSheetIDResponse);
}

// 保存解读报告请求
message SaveInterpretReportRequest {
    uint64 answer_sheet_id = 1;  // 答卷ID，必须大于0
    string medical_scale_code = 2;  // 医学量表代码，不能为空
    string title = 3;  // 标题，不能为空
    string description = 4;  // 描述，可以为空
    repeated InterpretItem interpret_items = 5;  // 解读项列表，至少一项
}

// 保存解读报告响应
message SaveInterpretReportResponse {
    uint64 id = 1;  // 解读报告ID
    string message = 2;  // 响应消息
}

// 根据答卷ID获取解读报告请求
message GetInterpretReportByAnswerSheetIDRequest {
    uint64 answer_sheet_id = 1;  // 答卷ID，必须大于0
}

// 根据答卷ID获取解读报告响应
message GetInterpretReportByAnswerSheetIDResponse {
    InterpretReport interpret_report = 1;  // 解读报告
}

// 解读报告
message InterpretReport {
    uint64 id = 1;                          // 解读报告ID
    uint64 answer_sheet_id = 2;             // 答卷ID
    string medical_scale_code = 3;          // 医学量表代码
    string title = 4;                       // 标题
    string description = 5;                 // 描述
    repeated InterpretItem interpret_items = 6; // 解读项列表
    string created_at = 7;                  // 创建时间
    string updated_at = 8;                  // 更新时间
}

// 解读项
message InterpretItem {
    string factor_code = 1;  // 因子代码，不能为空
    string title = 2;        // 标题，不能为空
    double score = 3;        // 分数
    string content = 4;      // 解读内容，不能为空
} 